k8s/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: default
spec:
  selector:
    matchLabels:
      run: db
  template:
    metadata:
      labels:
        run: db
    spec:
      containers:
        - image: bitnami/postgresql:latest
          imagePullPolicy: IfNotPresent
          name: db
          ports:
            - containerPort: 5432
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 30
            timeoutSeconds: 2
            exec:
              command: ["/bin/sh", "-c", "-e", "exec", "pg_isready", "-U", "jakub",  "-h", "127.0.0.1", "-p", "5432"]
          readinessProbe:
            initialDelaySeconds: 10
            timeoutSeconds: 5
            exec:
              command: ["/bin/sh", "-c", "-e", "exec", "pg_isready", "-U", "jakub",  "-h", "127.0.0.1", "-p", "5432"]
---

apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: default
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    run: db-rest
  type: NodePort
