k8s/simple-rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-rest
  namespace: default
spec:
  selector:
    matchLabels:
      run: simple-rest
  template:
    metadata:
      labels:
        run: simple-rest
    spec:
      containers:
        - image: japca/simple-rest:1.2.1
          imagePullPolicy: IfNotPresent
          name: simple-rest
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /actuator/health/liveness
              port: 8080
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /actuator/health/readiness
              port: 8080
          volumeMounts:
            - name: application-yml
              mountPath: "/config"
#              subPath: application.yml
              readOnly: true
      volumes:
        - name: application-yml
          configMap:
            name: simple-rest-config



---

apiVersion: v1
kind: Service
metadata:
  name: simple-rest
  namespace: default
  annotations:
#     cloud.google.com/neg: '{"exposed_ports": {"8080":{}}}'
    cloud.google.com/l4-rbs: "enabled"
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    run: simple-rest
  type: LoadBalancer
  externalTrafficPolicy: Cluster
