k8s/webflux-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webflux
  namespace: default
spec:
  selector:
    matchLabels:
      run: webflux
  template:
    metadata:
      labels:
        run: webflux
    spec:
      containers:
        - image: japca/webflux:1.1.0
          imagePullPolicy: IfNotPresent
          name: webflux
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /actuator/health/liveness
              port: 8080
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /actuator/health/readiness
              port: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: webflux
  namespace: default
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    run: webflux
  type: NodePort
